# aws_opensearch_crosscluster_replication

./: .env  .gitignore  README.md  create_es_replication_stack.sh  delete_es_replication_stack.sh  opensearch_Xcluster_replication.ipynb  pyproject.toml  replication_backup_restore.ipynb
