[project]
name = "opensearch-xcluster-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.68",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "requests-aws4auth>=1.3.1",
    "tabulate>=0.10.0",
]
